--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "helmet": "^3.9.0",
+    "jsonwebtoken": "^8.1.0",
     "moment": "^2.19.1",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
