--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.12.1",
-    "plaid": "^2.1.0"
+    "plaid": "^2.1.0",
+    "python-shell": "^0.4.0"
   }
 }
